--- a/css/default.css
+++ b/css/default.css
@@ -5,10 +5,10 @@ body {
 }
 
 .input, .preview {
-	width  : 100%;
-	height : 75vh;
-	border : 1px solid #ccc;
-	box-sizing: border-box;
+	width      : 100%;
+	height     : 75vh;
+	border     : 1px solid #ccc;
+	box-sizing : border-box;
 }
 
 .icon {
@@ -20,7 +20,9 @@ body {
 }
 
 .input {
-	display: none;
+	display     : none;
+	font-size   : 14pt;
+	font-family : "Source Code Pro", monospace;
 }
 
 .preview {
