Make the tabs a little rounded

--- a/css/default.css
+++ b/css/default.css
@@ -73,6 +73,14 @@ body {
 	font-weight: bold;
 }
 
+.tab {
+	border-radius: 4px 4px 0 0;
+}
+
+.tab-inactive {
+	color: lightgray;
+}
+
 /* ========================================================================== */
 /* MEDIA QUERIES                                                              */
 /* ========================================================================== */
