--- a/css/default.css
+++ b/css/default.css
@@ -77,8 +77,14 @@ body {
 	border-radius: 4px 4px 0 0;
 }
 
+.tab-active {
+	color: black;
+	cursor: pointer;
+}
+
 .tab-inactive {
 	color: lightgray;
+	cursor: not-allowed;
 }
 
 /* ========================================================================== */
