Add a link to the markdown cheatsheet

--- a/css/default.css
+++ b/css/default.css
@@ -87,6 +87,11 @@ body {
 	cursor: not-allowed;
 }
 
+.external_link {
+	text-decoration: none;
+	font-size: 50%;
+}
+
 /* ========================================================================== */
 /* MEDIA QUERIES                                                              */
 /* ========================================================================== */
