Add table formatting

--- a/css/default.css
+++ b/css/default.css
@@ -92,6 +92,10 @@ body {
 	font-size: 50%;
 }
 
+.pointer {
+	cursor: pointer;
+}
+
 /* ========================================================================== */
 /* MEDIA QUERIES                                                              */
 /* ========================================================================== */
